<resources>
    <string name="app_name">喜绿</string>
    <string name="errrotip">数据解析失败请返回再试</string>
    <string name="app_key">cee9f4368174507ce3308bfa</string>
    <string name="appidjiguang">12345678911</string>
    <string name="homepage">首页</string>
    <string name="note">日记</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>
    <string name="focus">关注</string>
    <string name="recommended">推荐</string>
    <string name="update">更新</string>
    <string name="mywallet">我的钱包</string>
    <string name="privateletter">私信</string>
    <string name="shoppingcar">购物车</string>
    <string name="order">订单</string>
    <string name="coupons">优惠券</string>
    <string name="audit">审核</string>
    <string name="mycollection">我的收藏</string>
    <string name="mygoods">我发布的商品</string>
    <string name="systemsetting">系统设置</string>
    <string name="salein">出售中</string>
    <string name="saledown">已下架</string>
    <string name="share">分享</string>
    <string name="editv">编辑</string>
    <string name="deletev">删除</string>
    <string name="submission">提交</string>
    <string name="sure">确定</string>
    <string name="getverificationcode">获取验证码</string>
    <string name="setpushmsg">消息设置</string>
    <string name="userprotocol">用户注册协议</string>
    <string name="aboutus">关于我们</string>
    <string name="walletdetail">明细</string>
    <string name="accountbalance">账户余额</string>
    <string name="recharge">充值</string>
    <string name="rechargecenter">充值中心</string>
    <string name="makecash">提现</string>
    <string name="transactiondetails">交易明细</string>
    <string name="weixinplay">微信支付</string>
    <string name="aliplay">支付宝支付</string>
    <string name="etrechargeamount">请输入充值金额大于1</string>
    <string name="rechargeprotocol">《充值协议》</string>
    <string name="withdrawcash">余额提现</string>
    <string name="cashchose">余额提现方式选择</string>
    <string name="makecollections">收款账号信息</string>
    <string name="ali">支付宝</string>
    <string name="payee">收款人：</string>
    <string name="payeenumber">收款账号：</string>
    <string name="payeemoney">收款金额：</string>
    <string name="transactionmsg">交易消息</string>
    <string name="aftersalemsg">售后消息</string>
    <string name="sendgoods">发货</string>
    <string name="orderclose">订单关闭</string>
    <string name="waitsend">待发货</string>
    <string name="waitgoods">待收货</string>
    <string name="waitevaluate">待评价</string>
    <string name="applyforaftersale">申请售后</string>
    <string name="waitpay">待付款</string>
    <string name="payed">已付款</string>
    <string name="Refunded">已退款</string>
    <string name="textvideo">你还没发布过视频哦 ~</string>
    <string name="textsign">本宝宝还没有想到个性签名</string>
    <string name="focustogether">相互关注</string>
    <string name="focused">已关注</string>
    <string name="detail">详情</string>
    <string name="orderdetail">订单详情</string>
    <string name="Contactsale">联系商家</string>
    <string name="call">拨打电话</string>
    <string name="dynamic_details">动态详情</string>
    <string name="comment">评论</string>
    <string name="myroder">我的订单</string>
    <string name="pay">付款</string>
    <string name="cancelroder">取消订单</string>
    <string name="contactaftersale">联系售后</string>
    <string name="logistics">查看物流</string>
    <string name="evaluate">评价</string>
    <string name="suretakegoods">确认收货</string>
    <string name="remindsend">提醒发货</string>
    <string name="deleteroder">删除订单</string>
    <string name="applyforaftersale2">售后申请</string>
    <string name="applytype">申请类型</string>
    <string name="applyreason">原因</string>
    <string name="applyexplain">情况说明</string>
    <string name="applyexplaindetail">请您详细填写申请说明。（最多170字）</string>
    <string name="uploadvoucher">上传凭证</string>
    <string name="uploadpicture">上传照片</string>
    <string name="applysubmission">提交申请</string>
    <string name="refundamount">退款金额</string>
    <string name="personaldata">个人资料</string>
    <string name="headimg">头像</string>
    <string name="nichen">真实姓名</string>
    <string name="phone">手机号</string>
    <string name="sagnetrue">个性签名</string>
    <string name="shoppingaddress">收货地址</string>
    <string name="myfocuse">我关注的</string>
    <string name="myfans">我的粉丝</string>
    <string name="changephone">更改绑定的手机号</string>
    <string name="idcardcheck">身份证认证</string>
    <string name="businesscheck">营业执照认证</string>
    <string name="save">保存</string>
    <string name="manageaddress">管理收货地址</string>
    <string name="addaddress">添加收货地址</string>
    <string name="updateaddress">修改收货地址</string>
    <string name="trailer">预告</string>
    <string name="playback">回放</string>
    <string name="airon">即将开播</string>
    <string name="showoff">炫耀一下</string>
    <string name="auditing_video">审核中视频</string>
    <string name="auditing_fail_video">审核不通过视频</string>
    <string name="cashcoupon">全场满200减100</string>
    <string name="admsg">广告信息</string>
    <string name="goodsname">商品名称</string>
    <string name="goodsdetails">描述商品简介</string>
    <string name="goodsmasterpicture">商品主图</string>
    <string name="goodspicture">商品图片</string>
    <string name="plantdate">播种年月:</string>
    <string name="state">状态:</string>
    <string name="number">数量:</string>
    <string name="unit">单位:</string>
    <string name="unitprice">单价(元):</string>
    <string name="totalprice">总价(元):</string>
    <string name="contcats">联系人:</string>
    <string name="contcatsphone">联系电话:</string>
    <string name="alipayname">支付宝姓名:</string>
    <string name="alipaynumber">支付宝帐号:</string>
    <string name="paymode">交易方式:</string>
    <string name="sharelift">分享生活</string>
    <string name="jiontheme">参与话题</string>
    <string name="longpost">长帖子</string>
    <string name="plantdiary">种植日记</string>
    <string name="shortvideo">短视频</string>
    <string name="equipment">应用设备</string>
    <string name="live">直播</string>
    <string name="shopping">购物</string>
    <string name="filter">滤镜</string>
    <string name="album">相册</string>
    <string name="takephoto">单击拍照</string>
    <string name="release">发布</string>
    <string name="videotype">视频类型</string>
    <string name="putongshortvideo">普通小视频</string>
    <string name="advertvideo">广告视频</string>
    <string name="nextstep">下一步</string>
    <string name="creatplant">创建植物</string>
    <string name="wancheng">完成</string>
    <string name="plantmachine">智能种植机</string>
    <string name="plantlight">植物补光灯</string>
    <string name="longpostpictrue">图片</string>
    <string name="aibum">相册</string>
    <string name="shot">拍摄</string>
    <string name="smallvideo">小视频</string>
    <string name="edtexthint">   请输入消息...</string>
    <string name="shareto">分享到</string>
    <string name="xilvfriends">喜绿好友</string>
    <string name="criclefriends">朋友圈</string>
    <string name="weixin">微信</string>
    <string name="QQ">QQ好友</string>
    <string name="weibo">微博</string>
    <string name="report">举报</string>
    <string name="coyplink">复制链接</string>
    <string name="keeploction">保存到本地</string>
    <string name="unlike">不感兴趣</string>
    <string name="jmui_symbol_second">\"</string>
    <string name="jmui_time_format_year_month_day">yyyy年-MM月-dd日</string>
    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm:ss </string>
    <string name="jmui_time_format_hours">HH:mm</string>
    <string name="jmui_yesterday">昨天</string>
    <string name="jmui_before_yesterday">前天</string>
    <string name="jmui_before_dawn">凌晨</string>
    <string name="jmui_morning">早上</string>
    <string name="jmui_afternoon">下午</string>
    <string name="jmui_night">晚上</string>
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>
    <string name="year">年</string>
    <string name="jmui_month">月</string>
    <string name="jmui_day">日</string>
    <string name="second">秒</string>
    <string name="draft">[草稿]</string>
    <string name="jmui_picture">图片</string>
    <string name="type_picture">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="type_file">[文件]</string>
    <string name="type_smallvideo">[小视频]</string>
    <string name="type_video">[视频]</string>
    <string name="send_location">发送地理位置</string>
    <string name="group_notification">[群组消息]</string>
    <string name="type_custom">[自定义消息]</string>
    <string name="network_disconnected_hint">当前网络不可用, 请检查您的网络设置</string>
    <string name="somebody_at_me">[有人@我]</string>
    <string name="jmui_delete_conv">删除该聊天</string>
    <string name="jmui_cancel">取消</string>
    <string name="jmui_resend_message_hint">重发该消息？</string>
    <string name="jmui_resend_commit">重发</string>
    <string name="jmui_loading">正在加载</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="all_images">全部图片</string>
    <string name="jmui_server_800002">AppKey信息为空</string>
    <string name="jmui_server_800003">AppKey未注册</string>
    <string name="jmui_server_800004">用户ID为空</string>
    <string name="jmui_server_800005">用户ID未注册(AppKey无该UID)</string>
    <string name="jmui_server_800006">用户ID不存在(数据库中无该UID)</string>
    <string name="jmui_server_800012">请重新登录</string>
    <string name="jmui_server_800013">您的账号已登出，请重新登录</string>
    <string name="jmui_server_800014">发起的用户与目标用户appkey不匹配</string>
    <string name="jmui_server_801003">用户名或密码错误</string>
    <string name="jmui_server_802001">用户名为空</string>
    <string name="jmui_server_801004">用户名或密码错误</string>
    <string name="jmui_server_803001">发送消息失败，状态存储异常</string>
    <string name="jmui_server_803002">发送消息失败，系统网络异常</string>
    <string name="jmui_server_803003">发送失败，目标用户未注册或不存在</string>
    <string name="jmui_server_803004">发送失败，此群已被删除</string>
    <string name="jmui_server_803005">您已被请出此群，不能发送消息</string>
    <string name="jmui_server_803008">消息已发出，但被对方拒收了。</string>
    <string name="jmui_server_803009">发送失败,消息中包含敏感词。</string>
    <string name="jmui_server_803010">发送消息的频率超过限制，发送失败</string>
    <string name="jmui_server_805002">添加好友失败，双方已经是好友</string>
    <string name="jmui_server_805003">删除好友失败，目标用户不是自己的好友</string>
    <string name="jmui_server_808003">讨论组数量已达上限，创建失败</string>
    <string name="jmui_server_808004">群组名长度超出上限</string>
    <string name="jmui_server_810003">用户不属于该群组</string>
    <string name="jmui_server_810005">要添加的用户尚未注册</string>
    <string name="jmui_server_810007">用户已存在</string>
    <string name="jmui_server_810008">讨论组的成员数量已达上限，添加失败</string>
    <string name="jmui_server_810009">该用户拥有的讨论组数量已达上限，添加失败</string>
    <string name="jmui_server_811003">用户不在该讨论组中，删除成员失败</string>
    <string name="jmui_server_812002">您已被请出此群，不能修改相关信息</string>
    <string name="jmui_server_818001">要添加的黑名单列表为空，添加失败</string>
    <string name="jmui_server_818002">要添加的黑名单列表中有成员不存在，添加失败</string>
    <string name="jmui_server_818003">要添加的黑名单列表中有成员不能被添加，添加失败</string>
    <string name="jmui_server_818004">要添加的黑名单列表中有成员重复添加，添加失败</string>
    <string name="jmui_sdk_http_899001">用户已存在</string>
    <string name="sdk_http_899006">该群已被删除</string>
    <string name="jmui_sdk_http_898005">uid不存在</string>
    <string name="jmui_sdk_http_898006">此群已被删除</string>
    <string name="jmui_sdk_http_898008">校验失败</string>
    <string name="jmui_sdk_http_898009">APPKey不存在</string>
    <string name="jmui_sdk_http_898010">请求失败，请稍候重试</string>
    <string name="jmui_sdk_http_898030">系统繁忙，稍后重试</string>
    <string name="jmui_sdk_87x_871104">服务器返回错误</string>
    <string name="jmui_sdk_87x_871300">API调用发起者尚未登录</string>
    <string name="jmui_sdk_87x_871303">用户名以数字或字母开头，可含有"数字 字母 下划线 . - @"</string>
    <string name="jmui_sdk_87x_871304">密码长度要在4–128个字节之间</string>
    <string name="jmui_sdk_87x_871305">名称长度须小于64个字节</string>
    <string name="jmui_sdk_87x_871309">消息所含文件不存在</string>
    <string name="jmui_sdk_87x_871310">网络已断开，请检查网络连接</string>
</resources>