<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="150dp"
              android:layout_height="230dp"
              android:background="@drawable/pop"
              android:padding="10dp"
    >
    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/pop_mywallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        >
        <ImageView
            style="@style/popiv"
            android:src="@drawable/qianbao"
            />
        <TextView
            style="@style/poptv"
            android:text="@string/mywallet"
            />
    </LinearLayout>
    <View
        android:layout_width="115dp"
        android:layout_height="1dp"
        android:background="@color/linebackground"/>

  <LinearLayout
      android:layout_marginTop="10dp"
      android:id="@+id/pop_privateletter"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:clickable="true"
      >
      <ImageView
            style="@style/popiv"
          android:src="@drawable/privateletter"
          />
      <TextView
          style="@style/poptv"
          android:text="@string/privateletter"

          />
  </LinearLayout>
    <View
        android:layout_width="115dp"
        android:layout_height="1dp"
        android:background="@color/linebackground"/>
    <LinearLayout
        android:id="@+id/pop_shoppingcar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <ImageView
            style="@style/popiv"
            android:src="@drawable/myshoppingcart"
            />
        <TextView
            style="@style/poptv"
            android:text="@string/shoppingcar"
            />
    </LinearLayout>
    <View
        android:layout_width="115dp"
        android:layout_height="1dp"
        android:background="@color/linebackground"/>
    <LinearLayout
        android:id="@+id/pop_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <ImageView
            style="@style/popiv"
            android:src="@drawable/order"
            />
        <TextView
            style="@style/poptv"
            android:text="@string/order"
            />
    </LinearLayout>
    <View
        android:layout_width="115dp"
        android:layout_height="1dp"
        android:background="@color/linebackground"/>
    <LinearLayout
        android:id="@+id/pop_coupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <ImageView
            style="@style/popiv"
            android:src="@drawable/coupon"
            />
        <TextView
            style="@style/poptv"
            android:text="@string/coupons"

            />
    </LinearLayout>
    <View
        android:layout_width="115dp"
        android:layout_height="1dp"
        android:background="@color/linebackground"/>
    <LinearLayout
        android:id="@+id/pop_audit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <ImageView
            style="@style/popiv"
            android:src="@drawable/videoaudit"
            />
        <TextView
            style="@style/poptv"
            android:text="@string/audit"

            />
    </LinearLayout>
    <View
        android:layout_width="115dp"
        android:layout_height="1dp"
        android:background="@color/linebackground"/>
    <LinearLayout
        android:id="@+id/pop_mycollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <ImageView
            style="@style/popiv"
            android:src="@drawable/mycollection"
            />
        <TextView
            style="@style/poptv"
            android:text="@string/mycollection"

            />
    </LinearLayout>
    <View
        android:layout_width="115dp"
        android:layout_height="1dp"
        android:background="@color/linebackground"/>
    <LinearLayout
        android:id="@+id/pop_mygoods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="10dp"
        >
        <ImageView
            style="@style/popiv"
            android:src="@drawable/publishedgoods"
            />
        <TextView
            style="@style/poptv"
            android:text="@string/mygoods"

            />
    </LinearLayout>
</LinearLayout>
