<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.xbdl.xinushop.activity.mine.PersonalDataActivity">
    <RelativeLayout
        style="@style/head">
        <ImageView

            android:layout_centerVertical="true"
            android:src="@drawable/wode_return"
            style="@style/paddinglift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/iv_return"
            android:orientation="vertical"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_48"/>
        <TextView
            android:layout_centerInParent="true"
            android:text="@string/personaldata"
            android:textColor="@color/colorfocuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="#cccccc"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <View
        android:background="#f6f6f6"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <RelativeLayout
        android:id="@+id/system_personal_head"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            android:text="@string/headimg"
            style="@style/systemtext" />
        <ImageView
            android:id="@+id/iv_personaldata_hand_back"
            android:src="@drawable/back"
            style="@style/systeimg" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_personal_head"
            android:layout_toLeftOf="@id/iv_personaldata_hand_back"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45" />
    </RelativeLayout>
    <include layout="@layout/layout_line"/>
    <RelativeLayout
        android:id="@+id/system_personal_data_nechen"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="@dimen/sp_15"
            android:text="@string/nichen"
            style="@style/systemtext" />
        <ImageView
            android:id="@+id/iv_personaldata_nicheng_back"
            android:src="@drawable/back"
            style="@style/systeimg" />
        <TextView
            android:id="@+id/tv_personal_name"
            android:textSize="@dimen/sp_14"
            android:text="喜绿"
            android:layout_toLeftOf="@id/iv_personaldata_nicheng_back"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:textColor="#a4a4a4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <include layout="@layout/layout_line"/>
    <RelativeLayout
        android:id="@+id/system_personal_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="@dimen/sp_15"
            android:text="@string/phone"
            style="@style/systemtext" />
        <ImageView
            android:id="@+id/iv_personaldata_phone_back"
            android:src="@drawable/back"
            style="@style/systeimg" />
        <TextView
            android:id="@+id/tv_personal_phone"
            android:textSize="@dimen/sp_14"
            android:text="喜绿"
            android:layout_toLeftOf="@id/iv_personaldata_phone_back"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:textColor="#a4a4a4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="#f6f6f6"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <RelativeLayout
        android:id="@+id/rl_idcard_check"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:text="@string/idcardcheck"
            style="@style/systemtext" />
        <ImageView
            android:src="@drawable/back"
            style="@style/systeimg" />
    </RelativeLayout>
    <include layout="@layout/layout_line"/>
    <RelativeLayout
        android:id="@+id/rl_business_check"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:text="@string/businesscheck"
            style="@style/systemtext" />
        <ImageView
            android:src="@drawable/back"
            style="@style/systeimg" />
    </RelativeLayout>
    <View
        android:background="#f6f6f6"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <RelativeLayout
        android:id="@+id/rl_sagnatrue"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv_gexingqianming"
            android:text="@string/sagnetrue"
            style="@style/systemtext" />
        <TextView
            android:id="@+id/tv_signature"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textColor="#a4a4a4"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@id/tv_gexingqianming"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/back"
            style="@style/systeimg" />
    </RelativeLayout>
    <include layout="@layout/layout_line"/>
    <RelativeLayout
        android:id="@+id/rl_shopping_address"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:text="@string/shoppingaddress"
            style="@style/systemtext" />
        <ImageView
            android:src="@drawable/back"
            style="@style/systeimg" />
    </RelativeLayout>
    <View
        android:background="#f6f6f6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
