<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/enptyviewbackground"
    tools:context=".activity.mine.wallet.WithdrawCashActivity">
    <RelativeLayout
        style="@style/head">
        <ImageView
            android:id="@+id/iv_return"
            android:layout_centerVertical="true"
            android:src="@drawable/wode_return"
            style="@style/paddinglift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerInParent="true"
            android:text="@string/withdrawcash"
            android:textColor="@color/colorfocuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="#cccccc"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/gray"
        android:text="@string/cashchose"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40" />
    <LinearLayout
        android:id="@+id/ll_weixin_play"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48">
            <LinearLayout
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/weixin_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/actionbar_sel_color"
                    android:textSize="18sp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="@string/weixin"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <ImageView
                android:id="@+id/iv_weixin_check"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/xuanzhong_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_aliplay"
        android:layout_below="@id/ll_weixin_play"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48">
            <LinearLayout
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/zhifubao_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="#1c1c1c"
                    android:textSize="18sp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="@string/ali"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <ImageView
                android:id="@+id/iv_aliplay_check"
                android:visibility="gone"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/xuanzhong_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/gray"
        android:text="@string/makecollections"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40" />
    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">
            <TextView
                android:textColor="@color/actionbar_sel_color"
                android:textSize="18sp"
                android:text="@string/payee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_payee"
                android:background="@null"
                android:textColor="@color/actionbar_sel_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">
            <TextView
                android:textColor="@color/actionbar_sel_color"
                android:textSize="18sp"
                android:text="@string/payeenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_payeenumber"
                android:background="@null"
                android:textColor="@color/actionbar_sel_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">
            <TextView
                android:textColor="@color/actionbar_sel_color"
                android:textSize="18sp"
                android:text="@string/payeemoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_payeemoney"
                android:background="@null"
                android:textColor="@color/actionbar_sel_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_commit_makecash"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/makecash"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:background="@drawable/login_btn_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40" />
    </RelativeLayout>
</LinearLayout>